--- a/css/style.css
+++ b/css/style.css
@@ -6587,10 +6587,6 @@ p.product-item-price {
   padding: 20px 0px;
 }
 
-.product-desc-card-content {
-  display: grid;
-  grid-template-columns: minmax(0, 313px) 1fr;
-}
 
 .product-desc-card:last-child {
   border-bottom: 1px solid #C5C5C5;
@@ -6609,9 +6605,10 @@ p.product-desc-card-title {
 }
 
 .product-desc-card-info {
+  
   max-height: 0;             
   overflow: hidden;         
-  transition: max-height .5s ease;
+  transition: max-height 0.5s ease;
 }
 
 .product-desc-card-specifications {
@@ -6694,9 +6691,7 @@ p.product-desc-card-rating-number {
   color: #939393;
 }
 
-.product-desc-card-reviews {
-  grid-column: 2 / 2;
-}
+
 
 .product-desc-card-review {
   border-top: 1px solid #C5C5C5;
@@ -6777,4 +6772,91 @@ p.product-desc-card-review-text,
 
 .product-desc-card-review-more-btn.open .review-arrow {
   transform: rotate(180deg);
+}
+
+.more-reviews-btn {
+  text-transform: uppercase;
+  text-decoration: none;
+  border-bottom: 2px solid currentColor; 
+  padding-top: 20px;
+  padding-bottom: 2px;                   
+  transition: border-color 0.2s;
+}
+
+.more-reviews-btn:hover {
+  border-color: #000000;
+}
+
+.send-review {
+  margin-top: 20px;
+}
+
+p.send-review-title {
+  margin-bottom: 20px;
+}
+
+.send-review-title {
+  font-family: 'Prata', serif;
+  font-size: 24px;
+  font-weight: 500;
+  color: #000000;
+  margin-bottom: 0px;
+}
+
+.send-review-stars {
+  margin-bottom: 14px;
+}
+
+.send-review-stars svg {
+  cursor: pointer;
+  transition: fill 0.2s, stroke 0.2s;
+  fill: transparent;
+  stroke: #C0C0C0;
+}
+
+.send-review-stars svg.filled {
+  fill: #CFA567;
+  stroke: #CFA567;
+}
+
+.send-review-form {
+  display: flex;
+  flex-direction: column;
+}
+
+.send-review-form input {
+  border: none;
+  background-color: transparent;
+  border-bottom: 1px solid #C5C5C5;
+  padding: 6px 0px;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  color: #000000;
+  margin-bottom: 14px;  
+}
+
+.send-review-form textarea {
+  border: 1px solid #C0C0C0;
+  border-radius: 8px;
+  background-color: transparent;
+  padding: 14px;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  color: #000000;
+  resize: none;
+  min-height: 179px;
+  margin-bottom: 14px;
+}
+
+.accept-politics {
+  display: flex;
+  gap: 12px;  
+}
+
+.accept-politics p {
+  margin-bottom: 0px;
+  margin-top: 0px;
+  font-size: 14px;
 }
